src/styles.css
@font-face {
  font-family: 'Lugrasimo';
  src: url('./assets/fonts/lugrasimo-regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Roboto';
  src: url('./assets/fonts/roboto-regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

:root {
  --dark: #2d1306;
  --primary: #8B4513;
  --secondary: #027a7a;
  --bg-light: #fff9f3;
}

body {
  font-family: Roboto, sans-serif;
  background-color: var(--bg-light);
  color: var(--dark);

  display: flex;
  flex-direction: column;
  min-height: 100vh;
  min-height: 100svh;
  margin: 0;
}

app-root {
  display: flex;
  flex-direction: column;
  justify-items: start;
  flex: 1;
}

.main {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
}

footer {
  font-size: small;
  text-align: center;
  padding: 1em;
}

app-team-selector, app-result-estimation {
  width: 26em;
  padding: 1em;
}

h1 {
  font-family: Lugrasimo, serif;
  font-size: 2em;
  color: black;
  text-align: center;
  line-height: 0.8em;
  margin-bottom: 0;
  &::first-letter {
    font-size: 1.6em;
    margin-right: -0.15em;
  }
  &>small {
    display: block;
    white-space: nowrap;
    font-size: 0.7em;
    font-variant-caps: all-petite-caps;
    &::before, &::after {
      content: "";
      display: inline-block;
      width: 4em;
      height: 1em;
      background: url('assets/shapes/ornament.svg') no-repeat center center;
      background-size: contain;
      margin: 0 0.3em -0.2em 0.3em;
    }
    &::after {
      transform: scaleX(-1);
    }
  }
}

h2 {
  font-family: Lugrasimo, serif;
  color: var(--primary);
  margin-bottom: -0.2em;
}

form {
  display: grid;
  grid-template-columns: auto auto;
  gap: 0.8em;
  &>label {
    align-self: center;
    font-weight: bold;
  }
}

.bordered {
  padding: 0.8em;
  border: var(--primary) solid 1px;
  border-radius: 1em;
}

.auto-arrange-icons {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5em;
}

.role-cell {
  width: 2em;
  height: 2em;
  border-radius: 1em;
  text-align: center;
  display: table-cell;
  vertical-align: middle;

  font-family: Lugrasimo, serif;
  font-size: 1.2em;
  font-weight: bolder;
  padding: -1em;

  color: black;
  text-shadow: 
    -2px -2px 0 #fff,  
     2px -2px 0 #fff,
    -2px  2px 0 #fff,
     2px  2px 0 #fff;
}

app-number-input {
  text-align: center;
  display: grid;
  grid-template-columns: auto auto auto;
  width: min-content;
  gap: 0.2em;
  align-items: center;
  &>button {
    font-weight: bolder;
    width: 1.4em;
    height: 1.4em;
    font-size: 1.5em;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--primary);
    color: var(--bg-light);
    border-radius: 0.4em;
  }
  &>input {
    width: 2em;
    height: 2em;
    font-size: 1.2em;
    text-align: center;
    border: var(--dark) solid 1px;
    background-color: white;
  }
}

.stats-container {
  display: grid;
  grid-template-columns: 1fr 3fr 3fr;
  gap: 0.5em;
  white-space: nowrap;
  padding: 1em;
  min-width: fit-content;
  border: var(--dark) solid 1px;
  background-color: white;
}

.stats-y-axis {
  font-weight: bold;
  text-align: left;
  vertical-align: top;
}

.stats-align-left, .stats-align-right {
  vertical-align: center;
}

.stats-align-right {

  text-align: right;
}

.stats-align-left {
  text-align: left;
}

.stats-bar-village, .stats-bar-wolves {
  height: 0.6em;
  display: inline-block;
}

.stats-bar-village, .stats-bar-wolves {
  margin-left: 0.5em;
}

.stats-bar-village, .role-icon-village {
  color: var(--secondary);
  border: var(--secondary) solid 1px;
  background-image: repeating-linear-gradient(
    -40deg,
    transparent 0 1px,
    var(--secondary) 2px 3px
  );
}

.stats-bar-wolves, .role-icon-wolves {
  color: var(--primary);
  border: var(--primary) solid 1px;
  background-image: repeating-linear-gradient(
    -40deg,
    transparent 0 1px,
    var(--primary) 2px 3px
  );
}

.stats-header-village {
  font-weight: bold;
  color: var(--secondary);
  border-bottom: var(--secondary) solid 1px;
}

.stats-header-wolves {
  font-weight: bold;
  color: var(--primary);
  border-bottom: var(--primary) solid 1px;
}

@media (max-width: 50em) {
  .main {
    flex-direction: column;
    justify-content: start;
    gap: 0;
  }
  .stats-container {
    width: auto;
  }
}

